Inicindo componente criar pensamento

--- a/src/app/component/rodape/rodape.component.html
+++ b/src/app/component/rodape/rodape.component.html
@@ -1,3 +1,6 @@
-<p>
-  rodape works!
-</p>
+<footer>
+  <small class="TextoCopyright ff-inter">&copy;
+    2022 Grupo Alura. Todos os direitos reservados.
+  </small>
+  <img class="logoRodape" src="../../../assets/img/fundo-rodape.png" alt="logoRodape">
+</footer>
