--- a/src/app/component/pensamentos/criar-pensamentos/criar-pensamentos.component.html
+++ b/src/app/component/pensamentos/criar-pensamentos/criar-pensamentos.component.html
@@ -1,22 +1,86 @@
 <section class="container criar-pensamentos ff-inter">
   <header class="header">
-    <h2>Adicione um <br>pensamento novo:</h2>
+    <h2>Adicione um <br />pensamento novo:</h2>
   </header>
   <form action="">
     <label for="pensamento">Pensamento</label>
-    <input type="text" class="input" id="pensamento" name="pensamento" placeholder="Digite o pensamento">
+    <input
+      type="text"
+      class="input"
+      id="pensamento"
+      name="pensamento"
+      placeholder="Digite o pensamento"
+    />
     <label for="autoria">Autoria</label>
-    <input type="text" class="input" id="autoria" name="autoria" placeholder="Digite a autoria da fonte">
+    <input
+      type="text"
+      class="input"
+      id="autoria"
+      name="autoria"
+      placeholder="Digite a autoria ou fonte"
+    />
     <label for="modelo">Selecione o medelo de card</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" nome="modelo1">
+          <input
+             type="radio"
+             id="modelo1"
+             value="modelo1"
+             nome="modelo-card"
+           />
           <div class="custom-radio">
             <span></span>
           </div>
           <span>Modelo 1</span>
         </label>
+        previa:
+        <div class="modelo modelo2 ff-roboto-mono">
+          <img src="../../../../assets/img/modelo1.png" alt="modelo2">
+          <p class="conteudo">Aqui vai o conteúdo</p>
+          <p class="autoria"><b>Aqui vai a autoria</b></p>
+        </div>
+        <div class="radio-modelo">
+        <label for="modelo2">
+          <input
+             type="radio"
+             id="modelo2"
+             value="modelo2"
+             nome="modelo-card"
+           />
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 2</span>
+        </label>
+        previa:
+        <div class="modelo modelo3 ff-roboto-mono">
+          <img src="../../../../assets/img/modelo2.png" alt="modelo2">
+          <p class="conteudo">Aqui vai o conteúdo</p>
+          <p class="autoria"><b>Aqui vai a autoria</b></p>
+        </div>
+      </div>
+
+      <div class="radio-modelo">
+        <label for="modelo3">
+          <input
+             type="radio"
+             id="modelo3"
+             value="modelo3"
+             nome="modelo-card"
+           />
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 3</span>
+        </label>
+        previa:
+        <div class="modelo modelo3 ff-roboto-mono">
+          <img src="../../../../assets/img/modelo3.png" alt="modelo3">
+          <p class="conteudo">Aqui vai o conteúdo</p>
+          <p class="autoria"><b>Aqui vai a autoria</b></p>
+        </div>
+      </div>
       </div>
     </div>
   </form>
