--- a/src/app/component/pensamentos/criar-pensamentos/criar-pensamentos.component.html
+++ b/src/app/component/pensamentos/criar-pensamentos/criar-pensamentos.component.html
@@ -10,6 +10,7 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
+      [(ngModel)]="pensamento.conteudo"
     />
     <label for="autoria">Autoria</label>
     <input
@@ -18,6 +19,7 @@
       id="autoria"
       name="autoria"
       placeholder="Digite a autoria ou fonte"
+      [(ngModel)]="pensamento.autor"
     />
     <label for="modelo">Selecione o medelo de card</label>
     <div class="container-radio">
@@ -28,6 +30,7 @@
              id="modelo1"
              value="modelo1"
              nome="modelo-card"
+             [(ngModel)]="pensamento.modelo"
            />
           <div class="custom-radio">
             <span></span>
@@ -37,8 +40,8 @@
         previa:
         <div class="modelo modelo2 ff-roboto-mono">
           <img src="../../../../assets/img/modelo1.png" alt="modelo2">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria"><b>Aqui vai a autoria</b></p>
+          <p class="conteudo">{{pensamento.conteudo}}</p>
+          <p class="autoria"><b>{{pensamento.autor}}</b></p>
         </div>
       </div>
 
@@ -49,6 +52,7 @@
              id="modelo2"
              value="modelo2"
              nome="modelo-card"
+             [(ngModel)]="pensamento.modelo"
            />
           <div class="custom-radio">
             <span></span>
@@ -58,8 +62,8 @@
         previa:
         <div class="modelo modelo3 ff-roboto-mono">
           <img src="../../../../assets/img/modelo2.png" alt="modelo2">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria"><b>Aqui vai a autoria</b></p>
+          <p class="conteudo">{{pensamento.conteudo}}</p>
+          <p class="autoria"><b>{{pensamento.autor}}</b></p>
         </div>
       </div>
 
@@ -70,6 +74,7 @@
              id="modelo3"
              value="modelo3"
              nome="modelo-card"
+             [(ngModel)]="pensamento.modelo"
            />
           <div class="custom-radio">
             <span></span>
@@ -79,11 +84,14 @@
         previa:
         <div class="modelo modelo3 ff-roboto-mono">
           <img src="../../../../assets/img/modelo3.png" alt="modelo3">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria"><b>Aqui vai a autoria</b></p>
+          <p class="conteudo">{{pensamento.conteudo}}</p>
+          <p class="autoria"><b>{{pensamento.autor}}</b></p>
         </div>
       </div>
       </div>
-
+      <div class="acoes">
+        <button (click)="CriarPensamento()" class="botao">Salvar</button>
+        <button class="botao" [routerLink]="['/listar-pensamento']">Cancelar</button>
+      </div>
   </form>
 </section>
