--- a/src/app/component/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/component/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -7,10 +7,11 @@
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento [pensamento]="pensamento" (click)="carregarMais()"></app-pensamento>
     </div>
   </div>
 </section>
+<app-botoes-paginacao [haMaisPensamentos]="haMaisPensamentos"></app-botoes-paginacao>
 <ng-template #semPensamentos>
   <div class="ff-inter sem-pensamentos">
     <P>Não há pensamentos cadastrados!</P>
