--- a/src/app/component/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/component/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -1,20 +1,33 @@
 <section class="container">
   <header class="header d-flex">
+    <div class="buscar-pensamentos">
+      <input
+        type="search"
+        class="filtro"
+        placeholder="O que você procura?"
+        autofocus
+        [(ngModel)]="filtro"
+        (keyup)="pesquisar()"
+      />
+      <span class="material-symbols-outlined"> search </span>
+    </div>
     <h2 class="ff-inter">Meu mural</h2>
     <button class="botao" [routerLink]="['/criar-pensamento']">
       Adicionar pensamento
     </button>
   </header>
-  <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
+  <div class="mural" *ngIf="listaPensamentos.length > 0; else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento" (click)="carregarMais()"></app-pensamento>
+      <app-pensamento [pensamento]="pensamento"></app-pensamento>
     </div>
   </div>
 </section>
-<app-botoes-paginacao [haMaisPensamentos]="haMaisPensamentos"></app-botoes-paginacao>
+<app-botoes-paginacao
+  [haMaisPensamentos]="haMaisPensamentos"
+  (click)="carregarMais()"
+></app-botoes-paginacao>
 <ng-template #semPensamentos>
   <div class="ff-inter sem-pensamentos">
     <P>Não há pensamentos cadastrados!</P>
   </div>
 </ng-template>
-
