--- a/src/app/component/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/component/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -12,9 +12,14 @@
       <span class="material-symbols-outlined"> search </span>
     </div>
     <h2 class="ff-inter">Meu mural</h2>
-    <button class="botao" [routerLink]="['/criar-pensamento']">
-      Adicionar pensamento
-    </button>
+    <div class="botoes">
+      <button class="botao">Meu Mural</button>
+      <button class="botao" (click)="listarFavoritos()">Meus favoritos</button>
+      <button class="botao" [routerLink]="['/criar-pensamento']">
+        Novo pensamento
+      </button>
+    </div>
+
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0; else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
