--- a/src/app/component/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/component/pensamentos/pensamento/pensamento.component.html
@@ -3,6 +3,9 @@
   <p class="conteudo">{{pensamento.conteudo}}</p>
   <p class="autoria"><b>{{pensamento.autor}}</b></p>
   <div class="acoes">
+    <button class="botao-favorito" (click)="atualizarFavoritos()">
+      <img src="../../../../assets/img/{{ mudarIcone() }}.png" alt="">
+    </button>
     <button class="botao-editar" >
       <img src="/../assets/img/icone-editar.png" [routerLink]="['/pensamento/editar/{{pensamento.id}}']" alt="icone editar">
     </button>
